// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchForm should render (snapshot) 1`] = `
<div>
  <SearchContainer
    handleQueryChange={[Function]}
    handleSearch={[Function]}
    handleSuggestions={[Function]}
    value=""
  />
</div>
`;

exports[`SearchForm should render with suggestions (snapshot) 1`] = `
<div>
  <SearchContainer
    handleQueryChange={[Function]}
    handleSearch={[Function]}
    handleSuggestions={[Function]}
    value="tr"
  />
  <Suggestions
    handleSelect={[Function]}
    query="tr"
    suggestions={
      Array [
        Object {
          "nrResults": 123,
          "searchterm": "trui",
        },
      ]
    }
  />
</div>
`;
